criando as primeiras páginas

--- a/public/index.html
+++ b/public/index.html
@@ -8,12 +8,13 @@
     <link rel="stylesheet" type="text/css" href = "css/style.css" />
 </head>
 <body>
-    <h1>meu primeiro site usando Rails</h1>
+    <h1>Encurta Link</h1>
     <p>olá, vamos testar!</p>
 
-    <div class= "1parte">
-        
-    </div>
+    <section class= "1parte">
+        <h2>Aqui vai um subtítulo</h2>
+        <p>vamos brincar de código</p>
+    </section>
 
 
     
